<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/back"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <include layout="@layout/toolbar" />

    <EditText
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connexion" />


</LinearLayout>